app/styles/_popup.scss
html {
  width: 350px;
  height: 500px;
  overflow-x: hidden;
}

body {
  margin: 0;
  height: 100vh;
  width: 100vw;
}

.zync-popup-content.zync-content {
  transform: translateX(-100%);
}

.zync-settings-entry {
  height: 12.5%;
  width: 100%;
  display: flex;
  flex-direction: row;
  flex: 1 1 auto;
  padding-left: 15px;
}

.zync-settings-description {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.zync-settings-title {
  font-size: 15px;
}

.zync-settings-divider {
  height: 1px;
  background-color: lightgray;
}

.zync-settings-subtitle {
  font-size: 12px;
  color: gray;
}

.zync-settings-action {
  height: 100%;
  display: flex;
  align-items: center;
  width: 15%;
  margin-left: auto; margin-right: 0;
}

.zync-settings-group-title {
  font-size: 13px;
  color: rgb(255,64,129);
  margin-left: 10px;
  margin-top: 5px;
  margin-bottom: 5px;
}

.zync-scroll-container {
  align-self: flex-start;
  overflow-y: auto;
  height: 450px;
  width: 100%;
  flex-direction: column;
  justify-content: normal;
}

.zync-history-row {
  display: flex;
  width: 90%;
  flex-direction: row;
  margin-right: 5%;
  margin-left: 5%;
  margin-top: 10px;
  margin-bottom: 10px;
  flex: 1 1 auto;
  height: 200px;
}

.zync-history-entry {
  width: 42.5%;
}

.zync-history-entry-container {
  height: 80%;
  overflow: hidden;
  justify-content: center;
  display: flex;
  flex-flow: column;
  flex-grow: initial;
}

.zync-history-entry-actions {
  height: 20%;
  justify-content: flex-end;
  display: flex;
}

.zync-history-action {
  cursor: pointer;
}

.material-icons.md-dark {
  color: rgba(0, 0, 0, 0.54);
}

.zync-history-text {
  font-size: 12px;
  white-space: pre-wrap;
  width: 100%;
  height: 100%;
  word-wrap: break-word;
  overflow-y: auto;
  margin-left: 10px;
  margin-top: 5px;
}

.zync-history-image {
  max-width: 100%;
  max-height: 100%;
}

.zync-toolbar {
  height: 56px;
  width: 100%;
  background-color: #488CFF;
  color: #FFF;
  display: flex;
  align-items: center;
  align-self: flex-start;
  padding: 0 15px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.zync-toolbar .toolbar-brand {
  font-size: 20px;
  flex: 1;
}

.zync-toolbar .toolbar-actions a {
  color: #FFF;
  text-decoration: none;
}

.zync-toolbar .toolbar-actions i {
  cursor: pointer;
  vertical-align: middle;
}

.zync-popup-login-container {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.zync-activator-container {
  height: calc(100% - 56px);
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.zync-activator {
  max-width: 200px;
  width: 100%;
  position: relative;
  cursor: pointer;
}

.zync-activator img {
  display: block;
  width: 100%;
  position: relative;
  z-index: 2;
}

.zync-activator:before,.zync-activator:after {
  background-color: #488CFF;
  border-radius: 100%;
  width: 100%;
  height: 100%;
  display: block;
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0.5;
}

.zync-activator.active:before {
  animation: breathe 3s ease-in-out infinite;
}

.zync-activator.active:after {
  animation: breathe 6s ease-in-out infinite;
}

.zync-activator:not(.active) img {
  filter: grayscale(1);
}

@keyframes breathe {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.15);
  }
  100% {
    transform: scale(1);
  }
}

